--- a/src/main/resources/templates/admin-items.html
+++ b/src/main/resources/templates/admin-items.html
@@ -162,7 +162,7 @@
                   ></div>
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-white">
-                  $<span
+                  <span
                     th:text="${#numbers.formatDecimal(item.price, 1, 2)}"
                   ></span>
                 </td>
