--- a/src/main/resources/templates/edit-item.html
+++ b/src/main/resources/templates/edit-item.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Edit Item - Admin</title>
+    <title>Pahana Edu - Update Items</title>
+    <link rel="icon" th:href="@{/images/logo.png}" type="image/png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
